Implemented upload health card logic
